--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Lauber wedding destination</title>
-    <script type="module" src="/index.jsx"></script>
+    <title>The Lauber</title>
+    <script type="module" src="index.jsx"></script>
   </head>
   <body>
     <div id="app"></div>
